--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.90.1",
     "bootstrap": "^5.3.3",
     "googleapis": "^166.0.0",
     "next": "^14.2.4",
